--- a/Fax_Referral_API_Lambda_Functions.ipynb
+++ b/Fax_Referral_API_Lambda_Functions.ipynb
@@ -268,37 +268,19 @@
           "height": 383
         },
         "id": "8Mi_xvbp9scU",
-        "outputId": "46157b28-270a-4b3a-adea-425e1c5b29a9"
+        "outputId": "bd31c968-8dd1-4e8c-e4f7-f34f1dcfda01"
       }
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8a45a812",
-        "outputId": "acfade57-9c27-4901-fff0-c9e0cb82a939"
+        "id": "8a45a812"
       },
       "source": [
         "!pip install boto3"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: boto3 in /usr/local/lib/python3.12/dist-packages (1.40.21)\n",
-            "Requirement already satisfied: botocore<1.41.0,>=1.40.21 in /usr/local/lib/python3.12/dist-packages (from boto3) (1.40.21)\n",
-            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/lib/python3.12/dist-packages (from boto3) (1.0.1)\n",
-            "Requirement already satisfied: s3transfer<0.14.0,>=0.13.0 in /usr/local/lib/python3.12/dist-packages (from boto3) (0.13.1)\n",
-            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.12/dist-packages (from botocore<1.41.0,>=1.40.21->boto3) (2.9.0.post0)\n",
-            "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in /usr/local/lib/python3.12/dist-packages (from botocore<1.41.0,>=1.40.21->boto3) (2.5.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.41.0,>=1.40.21->boto3) (1.17.0)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -572,7 +554,7 @@
         "# The user needs to execute the terminal commands and create/edit the files manually.\n",
         "# Subsequent code blocks will provide the content for the other components and pages."
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -698,7 +680,7 @@
         "\n",
         "# export default FaxList;"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -754,7 +736,7 @@
         "\n",
         "# export default FaxItem;"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -843,7 +825,7 @@
         "\n",
         "# export default UploadForm;"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1142,7 +1124,7 @@
         "\n",
         "# export default DocumentRenderLink;"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1241,7 +1223,7 @@
         "# This code block provides the content for the config file and the updated Dashboard.js.\n",
         "# The user needs to create the directory/file and edit the files manually."
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1428,7 +1410,7 @@
         "# Note: This code block updates the FaxItem.js and FaxDetails.js files.\n",
         "# The user needs to edit these files manually."
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1530,7 +1512,7 @@
         "# Note: This code block updates the UploadForm.js file.\n",
         "# The user needs to edit this file manually."
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1667,7 +1649,7 @@
         "# Note: This code block updates the FaxDataEditForm.js file.\n",
         "# The user needs to edit this file manually."
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1736,7 +1718,7 @@
         "# Note: This code block updates the DocumentRenderLink.js file.\n",
         "# The user needs to edit this file manually."
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1795,7 +1777,7 @@
         "# 8. Start the upload.\n",
         "# 9. After the upload is complete, verify that the S3 bucket is still configured for static website hosting (under the \"Properties\" tab, \"Static website hosting\" section). Note down the \"Endpoint\" URL provided here. This is the URL where your frontend application will be accessible."
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1837,7 +1819,7 @@
         "# 15. Upload the entire contents of the newly generated 'build' folder to your S3 bucket, ensuring `index.html` is at the root.\n",
         "# 16. Your frontend application, now configured to point to your deployed API Gateway, should be accessible via the S3 static website hosting endpoint URL you noted earlier."
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1880,6 +1862,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
